welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: Boolean does not take parameters
			} else (getDirection() == Direction.OUEST) {
                                                                   ^